ingress-nginx-controller/workload/ingress-internal.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpd-internal
  namespace: myweb
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx-internal
  rules:
  - host: internal.testcloud.site
    http:
      paths:
      - backend:
          service:
            name: httpd-internal
            port:
              number: 80
        path: /
        pathType: Prefix
---
apiVersion: v1
kind: Service
metadata:
  name: httpd-internal
  namespace: myweb
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector:
    app: httpd
